--- a/my-portfolio/.gitignore
+++ b/my-portfolio/.gitignore
@@ -1,22 +1,62 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+yarn.lock
+
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# sw stuff
+public/sw.js
+public/workbox-*.js
+
+# storybook
+storybook-static
+
+# sonarqube local
+.scannerwork
+
+# env
+.env
+.env.local
+.dccache
+
+
+#cypress-report
+/mochawesome-report
+/cypress/results
+
+#cypress-videos
+cypress/videos
+
+#cypress-screenshots
+cypress/screenshots
+
+#cypress-downloads
+cypress/downloads
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
-.DS_Store
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
